k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zava-shop
  labels:
    app.kubernetes.io/name: zava-shop
    app.kubernetes.io/part-of: zava-shop-system
